--- a/public/pages/intro.html
+++ b/public/pages/intro.html
@@ -6,28 +6,28 @@
         <div class="card-body p-5">
             <div class="row justify-content-center">
                 <div class="col-12 pt-5 col-lg-7">
-                    <p>La vigilancia en salud pública es un proceso que consiste en la recolección, análisis, interpretación y divulgación de eventos que afectan o pueden afectar la salud de la población, a partir del cual, se toman decisiones para la prevención y control de enfermedades, se orientan políticas, se planifica la salud pública, se mejora el seguimiento y evaluación de las intervenciones, se racionalizan y optimizan los recursos disponibles y se lograr la efectividad de las acciones (Decreto 780 de 2016). En nuestro país, la información de tales eventos se realiza a través del sistema nacional de vigilancia en salud pública - Sivigila. </p>
-                    <p class="mt-5">Bajo el contexto anterior, establecer la vigilancia sobre los eventos de interés en salud pública, que son aquellos considerados como importantes o trascendentes para la salud colectiva; se constituye en una herramienta más para definir medidas y enfrentar la situacion, generando impactos positivos en la salud de la población. </p>
+                    <p>La vigilancia en salud pública es un proceso que consiste en la recolección, análisis, interpretación y divulgación de eventos que afectan o pueden afectar la salud de la población; por esta razón, se toman decisiones para la prevención y control de enfermedades, se orientan políticas, se planifica la salud pública, se mejora el seguimiento y evaluación de las intervenciones, se racionalizan y optimizan los recursos disponibles y se logra la efectividad de las acciones (Decreto 780 de 2016). En nuestro país, la información de tales eventos, se realiza a través del sistema nacional de vigilancia en salud pública - Sivigila.</p>
+                    <p class="mt-5">Bajo el contexto anterior, se debe establecer la vigilancia sobre los eventos de interés en salud pública, que son aquellos considerados como importantes o trascendentes para la salud colectiva; se constituye en una herramienta más, para definir medidas y enfrentar la situación, para generar impactos positivos en la salud de la población.</p>
                 </div>
                 <div class="col-12 col-lg-5 pt-4"><img class="img-fluid" src="assets/images/pages/intro/intro-1.svg" /></div>
                 <div class="col-12 pl-3">
-                    <p class="mt-4">Dos de estos eventos son la desnutrición aguda y la mortalidad por esta, en los niños y niñas menores de cinco años de edad. Con el fin de lograr una oportuna y correcta identificación de la desnutrición, de igual manera, ser tratada y reducir la mortalidad por esta causa, es fundamental conocer los protocolos que el país ha definido para su vigilancia y notificación.</p>
+                    <p class="mt-4">Dos de estos eventos a vigilar, son: la desnutrición aguda y la mortalidad causada por la misma desnutrición aguda, en los niños y niñas menores de cinco años de edad. Con el fin de lograr una oportuna y correcta identificación de la desnutrición y, al mismo tiempo, ser tratada y reducir la mortalidad causada por esta, es fundamental conocer los protocolos que el país ha definido, para su vigilancia y notificación.</p>
                 </div>
                 <div class="col-12">
                     <div class="bg-color-verde-claro mt-5 py-4 cont-flecha text-center">
-                        <p class="font-weight-bold">El contenido de esta unidad toma como referencia directa los protocolos de vigilancia en salud pública: </p>
+                        <p class="font-weight-bold">El contenido de esta unidad toma como referencia directa, los protocolos de vigilancia en salud pública.</p>
                     </div>
                 </div>
                 <div class="row mt-5 mr-auto pl-3">
                     <div class="col-auto"><img class="img-fluid" src="assets/images/pages/tema-1/vineta.svg" /></div>
                     <div class="col">
-                        <p class="pt-1">Desnutrición aguda moderada y severa en menores de cinco años, código 113.</p>
+                        <p class="pt-1">Desnutrición aguda moderada y severa, en menores de cinco años, código 113.</p>
                     </div>
                 </div>
                 <div class="row mt-3 mr-auto pl-3">
                     <div class="col-auto"><img class="img-fluid" src="assets/images/pages/tema-1/vineta.svg" /></div>
                     <div class="col">
-                        <p class="pt-1">Vigilancia integrada de muertes en menores de cinco años por Infección Respiratoria Aguda - IRA, Enfermedad Diarreica Aguda - EDA o desnutrición, código 591.</p>
+                        <p class="pt-1">Vigilancia integrada por muerte en menores de cinco años, por Infección Respiratoria Aguda - IRA, Enfermedad Diarreica Aguda – EDA, o desnutrición, código 591.</p>
                     </div>
                 </div>
             </div>
