Cambio titulo programa

--- a/public/main.html
+++ b/public/main.html
@@ -32,7 +32,7 @@
                                 <div class="row align-items-end">
                                     <div class="col-12 col-lg-6">
                                         <div class="curso-container">
-                                            <h3 class="curso-subtitulo text-color-orange" id="curso-titulo-componente">Manejo integrado de la desnutrición aguda en niño menor de 5 años.</h3>
+                                            <h3 class="curso-subtitulo text-color-orange" id="curso-titulo-componente">Manejo integrado de la desnutrición aguda en menor de 5 años.</h3>
                                             <h1 class="curso-titulo" id="curso-titulo-tema">Vigilancia de los eventos de desnutrición aguda y de muerte por IRA, EDA o desnutrición.</h1>
                                             <div class="brand-line-primary"></div>
                                             <div class="keywords"><span class="badge badge-pill badge-brand-light bg-brand-color-1 mr-2">Vigencia en salud pública</span><span class="badge badge-pill badge-brand-light bg-brand-color-2 mr-2">Protocolo de notificación obligatoria</span><span class="badge badge-pill badge-brand-light mr-2">Unidad notificadora</span></div>
