--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                         <div class="row align-items-end">
                             <div class="col-12 col-lg-6">
                                 <div class="curso-container">
-                                    <h3 class="curso-subtitulo text-color-orange" id="curso-titulo-componente">Manejo integrado de la desnutrición aguda en niño menor de 5 años.</h3>
+                                    <h3 class="curso-subtitulo text-color-orange" id="curso-titulo-componente">Manejo integrado de la desnutrición aguda en menor de 5 años.</h3>
                                     <h1 class="curso-titulo" id="curso-titulo-tema">Vigilancia de los eventos de desnutrición aguda y de muerte por IRA, EDA o desnutrición.</h1>
                                     <div class="brand-line-primary"></div>
                                     <p class="curso-descripcion">Tanto la morbilidad como la mortalidad debido a la desnutrición aguda en los niños y niñas menores de 5 años, son eventos de interés en salud pública para el país; los casos que se presenten deben ser reportados al sistema nacional de vigilancia en salud pública - Sivigila, de acuerdo con los parámetros dados por el Instituto Nacional de Salud - INS.</p><a class="curso-btn-iniciar btn btn-light mb-4" href="main.html"><span>Iniciar curso</span></a>
