--- a/public/material.html
+++ b/public/material.html
@@ -1117,7 +1117,7 @@
                 <div class="row">
                     <div class="col-12 col-md-5">
                         <h3 class="footer-subtitulo mb-4">ECOSISTEMA DE RECURSOS EDUCATIVOS DIGITALES </h3>
-                        <p class="footer-texto mb-2"><strong>Ingry Dayanna Bonilla Monzon </strong><br /> <span class="text-small">Líder del equipo</span></p>
+                        <p class="footer-texto mb-2"><strong>Maria Camila García Santamaría</strong><br /> <span class="text-small">Líder del equipo</span></p>
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -1125,43 +1125,30 @@
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Contenido Instruccional
                         </h4>
-                        <p class="footer-texto mb-2"><strong>Gloria Matilde Lee Mejía </strong><br /> <span class="text-small">Responsable del equipo</span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Comercio y Servicios</span><br><span class="text-small">Regional Tolima</span></p>
-                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor pedagógico<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor metodológico y pedagógico<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br><span class="text-small">Regional Santander </span></p>
-                        <p class="footer-texto mb-2"><strong>María Cecilia Cuartas</strong><br /><span class="text-small">Asesora Nutrición<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Consultor Externo de DSM</span></p>
-                        <p class="footer-texto mb-2"><strong>Claudia Marcela Camargo Ramos</strong><br /><span class="text-small">Profesional Especializado<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">ICBF</span></p>
-                        <p class="footer-texto mb-2"><strong>Luz Angela Ochoa</strong><br /><span class="text-small">Profesional Especializado<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Ministerio de Salud y PS</span></p>
-                        <p class="footer-texto mb-2"><strong>Paul René Ocampo</strong><br /><span class="text-small">Asesor Dirección de Nutrición ICBF<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">ICBF</span></p>
-                        <p class="footer-texto mb-2"><strong>Oscar Absalón Guevara</strong><br /> <span class="text-small">Diseñador Instruccional<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Gestión Industrial </span><br><span class="text-small">Regional Distrito Capital</span></p>
-                        <p class="footer-texto mb-2"><strong>Silvia Milena Sequeda Cárdenas</strong><br /> <span class="text-small">Evaluador Instruccional<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Pedro Ducuara</strong><br /><span class="text-small">Experto temático<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Ministerio de Salud y Protección Social</span></p>
+                        <p class="footer-texto mb-2"><strong>Maritza Paz</strong><br /><span class="text-small">Diseñador Instruccional<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Diseño y Metrología</span><br><span class="text-small">Regional Distrito Capital</span></p>
+                        <p class="footer-texto mb-2"><strong>María Isabel Román Rueda</strong><br /><span class="text-small">Revisora de estilo<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura </span><br><span class="text-small">Regional Santander</span></p>
                     </div>
                     <div class="col-12 col-md-5">
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Diseño y desarrollo de recursos educativos digitales
                         </h4>
-                        <p class="footer-texto"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span></p>
-                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Integración de recursos y pruebas<br /></span></p>
-                        <p class="footer-texto"> <strong>Eulises Orduz Amezquita</strong><br /><span class="text-small">Diseño Web<br /></span></p>
-                        <p class="footer-texto"> <strong>Camilo Andrés Villamizar Lizcano</strong><br />
-                            <strong>Nelson Iván Vera Briceño</strong><br />
-                            <strong>Lady Adriana Ariza Luque</strong><br />
-                            <strong>Maria Camila Ovalle Ospina </strong><br />
-                            <strong>Víctor Raúl Cárdenas Cáceres</strong><br><span class="text-small">Producción Audiovisual<br /></span></p>
-                        <p class="footer-texto"><strong>Edgar Mauricio Cortes</strong><br /> <span class="text-small">Desarrollo Front-End<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura </span><br><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Soporte organizacional<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">CENTRO DE COMERCIO Y SERVICIOS </span><br><span class="text-small">Regional Tolima</span></p>
+                        <p class="footer-texto"> <strong>Carlos Julian Ramirez Benitez</strong><br /><span class="text-small">Diseño Web & Producción Audiovisual<br /></span></p>
+                        <p class="footer-texto"><strong>Lizeth Karina Manchego Suárez</strong><br /> <span class="text-small">Desarrollo Front-End<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br><span class="text-small">Regional Santander </span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
                         </h4>
-                        <p class="footer-texto"><strong>Brayan Steven Pinto Díaz </strong><br />
-                            <strong>Edilson Laverde Molina </strong><br />
-                            <strong>Ricardo Alfonso González Vargas </strong><br /><span class="text-small">Validación de recursos.<br /></span></p>
+                        <p class="footer-texto"><strong>Milady Tatiana Villamil Castellanos </strong><br /><span class="text-small">Validación de recursos<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de comercio y servicios</span><br><span class="text-small">Regional Tolima</span></p>
                     </div>
                     <div class="col-12 col-md-2">
