--- a/public/pages/tema-1.html
+++ b/public/pages/tema-1.html
@@ -306,7 +306,7 @@
                 </div>
             </div>
             <div class="bg-color-verde-claro mt-5 py-4 cont-flecha text-center mt-5">
-                <p class="font-weight-bold">EAPB de salud:</p>
+                <p class="font-weight-bold">EAPB:</p>
             </div>
             <div class="row mt-5 mr-auto pl-3">
                 <div class="col-auto"><img class="img-fluid" src="assets/images/pages/tema-1/vineta.svg" /></div>
