--- a/public/pages/tema-2.html
+++ b/public/pages/tema-2.html
@@ -172,9 +172,18 @@
                 <div class="row bg-rosa-claro mx-0 mt-5">
                     <div class="col-7 my-auto pl-5">
                         <h3 class="texto-naranja">A- Definición de la fuente</h3>
-                        <p class="mt-5">Estadísticas vitales y Registro Único de Afiliación -RUAF, módulo de defunciones: a partir de la información estadística del certificado de defunción, se podrán identificar casos de enfermedades objeto de vigilancia epidemiológica, la cual servirá para conocer la magnitud de problemas en salud, evaluar programas y realizar estudios de factores de riesgo. La cobertura de las estadísticas vitales se da a nivel nacional, departamental y municipal.</p>
                     </div>
                     <div class="col-5 m-0 p-0"><img class="img-fluid" src="assets/images/pages/tema-2/tema-2-11.svg" /></div>
+                </div>
+                <div class="row bg-rosa-mas-claro mx-0 mt-2">
+                    <div class="col-12">
+                        <div class="row mt-5 mr-auto pl-3 mx-0">
+                            <div class="col-auto"><img class="img-fluid" src="assets/images/pages/tema-1/vineta.svg" /></div>
+                            <div class="col-11">
+                                <p class="pt-1">Estadísticas vitales y Registro Único de Afiliación -RUAF, módulo de defunciones: a partir de la información estadística del certificado de defunción, se podrán identificar casos de enfermedades objeto de vigilancia epidemiológica, la cual servirá para conocer la magnitud de problemas en salud, evaluar programas y realizar estudios de factores de riesgo. La cobertura de las estadísticas vitales se da a nivel nacional, departamental y municipal. </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row bg-rosa-mas-claro mx-0 mt-2">
                     <div class="col-12">
@@ -260,7 +269,8 @@
                 <div class="row bg-azul-mas-claro mx-0 mt-2">
                     <div class="col-12 pl-4 pt-5">
                         <p class="font-weight-bold">Notificación semanal.</p>
-                        <p class="mt-3 pb-5">la UNM notifica a la UND (departamental) semanalmente, a partir de la estructura y contenidos mínimos que hacen parte del subsistema de información, para la vigilancia de los eventos de interés en salud pública.</p>
+                        <p class="mt-4">la UNM notifica a la UND (departamental) semanalmente, a partir de la estructura y contenidos mínimos que hacen parte del subsistema de información, para la vigilancia de los eventos de interés en salud pública.</p>
+                        <p class="mt-4 pb-5">El departamento notifica a la nación (INS) semanalmente, a partir de la estructura y contenidos mínimos que hacen parte del subsistema de información para la vigilancia de los eventos de interés en salud pública.</p>
                     </div>
                 </div>
                 <div class="row bg-verde-claro mx-0 mt-2">
