Ajuste imagen // repositorio 2021

--- a/public/pages/tema-1.html
+++ b/public/pages/tema-1.html
@@ -233,7 +233,7 @@
             </div>
             <div class="row bg-verde-mas-claro mx-0">
                 <div class="col-12 text-center">
-                    <p class="font-weight-bold mt-5 ml-5 text-left">Notificación Inmediata </p><img class="img-fluid mt-4 p-5" src="assets/images/pages/tema-1/tema-1-11.svg" />
+                    <p class="font-weight-bold mt-5 ml-5 text-left">Notificación Inmediata </p><img class="img-fluid mt-4 p-5" src="assets/images/pages/tema-1/tema-1-11.png" />
                     <p class="mb-3">Fuente: adaptado de Sivigila (2019).</p>
                     <p class="text-left">Debe existir una transferencia de la información en el ámbito local, en el departamental y en el nacional. </p>
                     <p class="mb-5 text-left">Se informará a las EAPB de los casos, a través del sistema de vigilancia en salud pública. De igual forma, deberá generarse la entrega de información y coordinación, entre los equipos de vigilancia en salud pública y los programas de seguridad alimentaria y nutricional, con el fin de activar la ruta de atención a la desnutrición.</p>
