--- a/public/pages/tema-2.html
+++ b/public/pages/tema-2.html
@@ -282,7 +282,7 @@
                 </div>
                 <div class="row bg-verde-mas-claro mx-0">
                     <div class="col-12 text-center">
-                        <p class="font-weight-bold mt-5 ml-5 text-left">Notificación Inmediata </p><img class="img-fluid mt-4 p-5" src="assets/images/pages/tema-1/tema-1-11.svg" />
+                        <p class="font-weight-bold mt-5 ml-5 text-left">Notificación Inmediata </p><img class="img-fluid mt-4 p-5" src="assets/images/pages/tema-1/tema-1-11.png" />
                         <p class="mb-3">Fuente: adaptado de Sivigila (2019).</p>
                     </div>
                 </div>
